// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Br component 1`] = `
<div
  className="Main"
/>
`;

exports[`Br component 2`] = `
<div
  className="Ribbon"
/>
`;

exports[`Credit component 1`] = `
<span
  className="Credit"
  data-label="Credit"
>
  Some credit
</span>
`;

exports[`Credit component 2`] = `
<span
  className="Credit--Compact"
  data-label="Credit"
>
  Some credit
</span>
`;

exports[`Markup component 1`] = `
<div>
  Some content...
  <br />
</div>
`;
